Mobile viewport support, Fixed score alignment, fixed splash screen sizes on mobile, started to refactor code into helper functions, created util.js, added comments, fixed some CSS issues, added more TODOs

--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/main.css"/>
 </head>
 
 <body>
+
 	<div id="wrapper">
 		<div id="timer">5.00</div>
 		<div id ="score">0</div>
 		<div id="content"></div>
 	</div>
+
 <script src="js/theGrid.js"></script>
 <script>
 	signalEvent('load');
 </script>
+
 </body>
+
 </html>
